[gd_scene load_steps=3 format=3 uid="uid://cndkr1vq6ab1o"]

[ext_resource type="Script" uid="uid://bfviu4cmsm4jo" path="res://common/ui/fields/slider/monologue_slider.gd" id="1_waj5i"]
[ext_resource type="PackedScene" uid="uid://x0daq5tsejey" path="res://common/ui/fields/field_label.tscn" id="2_ntngi"]

[node name="MonologueSlider" type="HBoxContainer"]
offset_right = 291.0
offset_bottom = 29.0
script = ExtResource("1_waj5i")

[node name="FieldLabel" parent="." instance=ExtResource("2_ntngi")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -100.0

[node name="DisplayLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.572549, 0.572549, 0.572549, 1)
text = "0.0"

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_type_variation = &"Button_Outline"
text = "reset"

[connection signal="drag_ended" from="HBoxContainer/HSlider" to="." method="_on_drag_ended"]
[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_value_changed"]
[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset"]
